fix: Fix some layout issues and add sticky footer.

--- a/Example_Code/AngularQuizApp/src/styles.css
+++ b/Example_Code/AngularQuizApp/src/styles.css
@@ -1,5 +1,26 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
+/* Sticky footer */
+html {
+  font-family: "Inconsolata", sans-serif;
+}
+
+
+body {
+}
+
+.application-wrapper {
+  display: flex;
+  height: 100%;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.application-wrapper-inner {
+  flex: 1;
+}
+
+
 .btn{
     border-radius: 0;
 }
